fixed social icon issue, sorted some spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,25 @@ body {
     background-size: cover;
 }
 
+.container-fluid, .container-lg, .container-md, .container-sm, .container-xl {
+    width: 100%;
+    padding-right: 0;
+    padding-left: 0;
+    margin-right: auto;
+    margin-left: auto;
+}
+
 .callout-container-info {
     float: right;
     margin: 620px 30px 10px;
     background-color: #bcdaf7;
 
+}
+
+.container-wrapper {}
+
+.container-wrapper--blue {
+    background-color: #bcdaf7;
 }
 
 /*--------------------------------------------Navbar*/
@@ -34,6 +48,7 @@ body {
     border: 0;
     width: 100%;
     background-color: #bcdaf7;
+    padding: 0;
 
 }
 
@@ -46,7 +61,9 @@ body {
     font-weight: bold;
     text-align: right;
     font-size: 30px;
+    margin-left: 0.5rem;
    
+
 }
 
 .navbar-nav .nav-link {
@@ -63,24 +80,25 @@ body {
     color: black;
 }
 
-.mark, mark {
-    background-color: #bcdaf7;
+.mark,
+mark {
+    background-color: #80b9f0;
     margin-left: 30px;
 }
 
 .features-container {}
 
 .features h2 {
-font-size: 1.9rem;
+    font-size: 1.9rem;
 }
 
 .quotes-container {}
 
 .quotes p {
     background-color: #bcdaf7;
+    margin-left: 15px;
+    margin-right: 15px;
 }
-
-
 
 /*--------------------------------Page Header*/
 
@@ -91,11 +109,33 @@ font-size: 1.9rem;
 }
 
 .page-header h2 {
-    background-color:  #bcdaf7;
-   
+    background-color: #bcdaf7;
+    margin-top: 0;
+
 }
+
 .page-header h3 {
     margin-top: 0;
+}
+
+/*-------------------------------------Block dividers */
+
+.block-divider {
+    width: 75px;
+    height: 5px;
+    border: 0;
+    background-color: #444;
+}
+
+.block-divider--short {
+    width: 35px;
+}
+
+/*---------------------------------------Content Containers*/
+
+.content-container {
+    padding-top: 75px;
+    padding-bottom: 75px;
 }
 
 /*-----------------------------------Media*/
@@ -108,12 +148,51 @@ font-size: 1.9rem;
     margin-left: 20px;
 }
 
+/*-----------------------------------------Footer*/
 .footer h6 {
     text-align: center;
 }
 
 .social-networks {
-    display: inline-block;
-    height: 15px;
-    width: 15px;
+    text-align: center;
+}
+
+.social-networks li {
+    display: inline;
+}
+
+.social-networks i {
+    font-size: 160%;
+    margin: 0;
+    padding: 2.5%;
+    color: #777777;
+
+}
+
+.quotes {
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+/*--------------------------------------------Lessons Container*/
+
+.lessons-container{
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+
+
+/*------------------------------------------Video Container*/
+.video {
+    text-align: center;
+}
+
+.video-container .content-container {
+    padding-top: 20px;
+    padding-bottom: 30px;
+}
+
+.video p {
+    text-align: center;
 }
